--- a/src/styles/CloudPanel.css
+++ b/src/styles/CloudPanel.css
@@ -10,13 +10,27 @@
 
 .hero {
     position: absolute;
-    top: 40%;
+    top: 37%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 0;
+    width: 800px;
+
+    font-size: 80px;
+    font-weight: 600;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: white;
+}
+
+.subhero {
+    position: absolute;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 0;
     width: 600px;
 
-    font-size: 60px;
+    font-size: 50px;
     font-weight: 600;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: white;
