--- a/src/styles/CloudPanel.css
+++ b/src/styles/CloudPanel.css
@@ -9,13 +9,12 @@
 }
 
 .hero {
-    position: absolute;
+    /* position: absolute;
     top: 37%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%); */
     z-index: 0;
-    width: 800px;
-
+    margin-bottom: 0;
     font-size: 80px;
     font-weight: 600;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -23,15 +22,37 @@
 }
 
 .subhero {
-    position: absolute;
+    /* position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%); */
     z-index: 0;
-    width: 600px;
 
     font-size: 50px;
     font-weight: 600;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: white;
+}
+
+div.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+
+div.bannerText {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
